--- a/style.css
+++ b/style.css
@@ -2,6 +2,8 @@ body {
     background-color: lightcyan;
     color: black;
     font-weight: 300;
+    padding-bottom: 100px;
+    padding-top: 100px;
 }
 
 
