--- a/style.css
+++ b/style.css
@@ -82,6 +82,7 @@ header {
 
 #pic {
   border-radius: 50%;
+  margin-top: 5%;
 }
 
 #about {
@@ -130,9 +131,12 @@ header {
 
 img {
   color: #111;
-  background: #81f505;
+  background: linear-gradient(45deg, #81b14f, #3d2758);
   box-shadow: 0 0 50px #81f505;
+
 }
+
+
 
 
 
