--- a/style1.css
+++ b/style1.css
@@ -1,5 +1,5 @@
 body {
-    background-color: lightcyan;
+    background-color: rgb(166, 209, 209);
     color: black;
     font-weight: 300;
     padding-bottom: 50px;
